			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

11-Dec-2001
~~~~~~~~~~~
Additional window hints - pinboard and panels refuse focus and pinboard
icons are marked as desktop features (requested by Laurent Moussault).
Thumbnails are now stored using an md5 hash of their names.

10-Dec-2001
~~~~~~~~~~~
New scanning system: blank items are added to the window first and then the
icons and types get filled in later. Looks better and simplifies the sizing
code a bit.
Code tidying in various places.

09-Dec-2001
~~~~~~~~~~~
Bugfix: Filer would quit if only Info boxes were open.
Bugfix: Pinboard and panel windows didn't get the correct hints set under
	Gtk+-2.0.

08-Dec-2001
~~~~~~~~~~~
Many internal changes to Collection widget for Gtk+-2.0. Should be more
efficient now, and easier to get aa fonts working...

07-Dec-2001
~~~~~~~~~~~
Fixed Gtk+-2.0 wheel mouse support.
In the Info box, 'File says...' was reporting on the program used to
edit the file, not the file itself!
For glib-2.0, use the new spawn function and report errors nicely.

06-Dec-2001
~~~~~~~~~~~
Updated Russian translation (Dmitry Elfimov).
Thumbnail information in the PNG image is now namespaced to 'Thumb'
(recommended by Jens Finke).
FileType SOAP RPC return format has been updated to the latest version
of the SOAP working draft.
Added Large File Support: files over 4Gb now have their sizes detected
correctly (Stephen Watson). Note: this disables libvfs support.
New option to have the minibuffer open by default on new windows
(Bochicchio).

05-Dec-2001
~~~~~~~~~~~
When resizing the collection, only ensure the cursor is still visible if
it was in the displayed area before.

When closing the Enter Path minibuffer, keep Show Hidden on if the cursor is
on a hidden item.

When using --show with a hidden file, turn on Show Hidden. Also, delay the
winking effect until the window actually appears.

04-Dec-2001
~~~~~~~~~~~
Support for new thumbnails spec; thumbnails are saved inside ~/.thumbnails