@@ -7,6 +7,8 @@ when someone sends patches!).
 
 BUGS
 
+Pinboard icons can only be dragged one at a time.
+
 TYPE_UNKNOWN items with no image can now be present in a window.
 Some code assumes that image is valid and may crash (eg, Copy in menu).
 Check everywhere!
