@@ -10,6 +10,8 @@
 
 extern Pinboard	*current_pinboard;
 
+extern Icon *pinboard_drag_in_progress;
+
 struct _Pinboard {
 	guchar		*name;		/* Leaf name */
 	GList		*icons;
@@ -17,12 +19,13 @@ struct _Pinboard {
 
 void pinboard_init(void);
 void pinboard_activate(guchar *name);
-void pinboard_pin(guchar *path, guchar *name, int x, int y, gboolean corner);
+void pinboard_pin(guchar *path, guchar *name, int x, int y);
 void pinboard_unpin(Icon *icon);
 void pinboard_wink_item(Icon *icon, gboolean timeout);
 void pinboard_clear(void);
 void pinboard_icon_may_update(Icon *icon);
 void pinboard_reshape_icon(Icon *icon);
 void pinboard_save(void);
+void pinboard_move_icons(void);
 
 #endif /* _PINBOARD_H */
