@@ -7,6 +7,8 @@
 Additional window hints - pinboard and panels refuse focus and pinboard
 icons are marked as desktop features (requested by Laurent Moussault).
 Thumbnails are now stored using an md5 hash of their names.
+Pinboard icons can be repositioned by dragging with the left mouse button
+(middle button drag stopped working with sawfish, and this is easier anyway).
 
 10-Dec-2001
 ~~~~~~~~~~~
